# usedCarCopilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  PLANS.md  README.md  dev.sh  docker-compose.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py
apps/api/app/db/: connection.py  orm.py
apps/api/app/embedding/: __init__.py  builder.py  service.py
apps/api/app/evaluation/: __init__.py  provider_validation.py  recommendation_eval.py  retrieval_eval.py
apps/api/app/ingestion/: seed_loader.py
apps/api/app/models/: schemas.py
apps/api/app/recommendation/: __init__.py  service.py
apps/api/app/retrieval/: service.py
apps/api/migrations/: 001_init.sql  002_chunk_embedding_content_hash.sql
apps/api/scripts/: build_embeddings.py  ingest_seed.py  migrate.py  run_recommendation_eval.py  run_retrieval_eval.py  start_compose_api.py  validate_ai_providers.py  wait_for_db.py
apps/api/tests/: test_retrieval_and_recommendation.py
apps/web/: Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
data/: README.md  car_model_data.md  eval_cases.json  listing.md  turners_listings.jsonl  turners_spider.py
documents/: README.md  data-and-evaluation-plan.md  delivery-roadmap.md  eval-report.md  linkedin-hr-pack.md  mvp-spec.md  product-brief.md  recommendation-eval-report.md  technical-architecture.md  used-car-rag-build-guide.md
learning/: current-project-learning.md
scripts/: prepare_seed_data.py  validate_seed_data.py
(+25 files in other folders)
